--- a/CarMedia/CarMedia/Home.xaml
+++ b/CarMedia/CarMedia/Home.xaml
@@ -6,8 +6,9 @@
       x:Class="CarMedia.Home"            
       mc:Ignorable="d" 
       Background="Black"
-    MinWidth="650" MinHeight="420" MaxHeight="430">
+    MinWidth="935" MinHeight="465">
 
+    <!--MinWidth="650" MinHeight="420" MaxHeight="430"-->
     
     <UserControl.Resources>
         <Style x:Key="buttonStyle">
@@ -50,7 +51,7 @@
         <Button x:Name="btnInternet" Content="Internet" Grid.ColumnSpan="1" HorizontalAlignment="Right" Margin="0,0,0,45" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
         <Button x:Name="btnPhone" Content="Phone" Grid.Column="3" Margin="-105,50,0,0" Style="{StaticResource buttonStyle}"></Button>
         <Button x:Name="btnGps" Content="GPS" Grid.Column="2" Grid.Row="1" Style="{StaticResource buttonStyle}"></Button>
-        <Button x:Name="btnCamera" Content="Camera" Grid.Column="2" Grid.Row="2" Style="{StaticResource buttonStyle}"></Button>
+        <Button x:Name="btnCamera" Content="Camera" Grid.Column="2" Grid.Row="2" Style="{StaticResource buttonStyle}" Click="btnCamera_Click"></Button>
         <Button x:Name="btnSettings" Content="Settings" Margin="0,0,0,45" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
     </Grid>
 </UserControl>
