--- a/CarMedia/CarMedia/Home.xaml
+++ b/CarMedia/CarMedia/Home.xaml
@@ -30,7 +30,11 @@
         </Style>
     </UserControl.Resources>
     
+
+    
     <Grid>
+        
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="3.1*"/>
             <ColumnDefinition  Width="3.2*"/>
@@ -44,14 +48,93 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         
-        <Clock:AnalogClock Grid.RowSpan="4" Grid.ColumnSpan="5" HorizontalAlignment="Center" Margin="10,12,0,0" VerticalAlignment="Center"/>
-        <Button x:Name="btnRadio" Content="Radio" HorizontalAlignment="Right" Margin="0,50,0,0" Style="{StaticResource buttonStyle}" Click="btnRadio_Click"></Button>
-        <Button x:Name="btnMusic" Content="Music" Grid.Row="1" Style="{StaticResource buttonStyle}" Click="btnMusic_Click"></Button>
-        <Button x:Name="btnVideo" Content="Video" Grid.Row="2" Style="{StaticResource buttonStyle}"></Button>
-        <Button x:Name="btnInternet" Content="Internet" Grid.ColumnSpan="1" HorizontalAlignment="Right" Margin="0,0,0,45" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
-        <Button x:Name="btnPhone" Content="Phone" Grid.Column="3" Margin="-105,50,0,0" Style="{StaticResource buttonStyle}"></Button>
-        <Button x:Name="btnGps" Content="GPS" Grid.Column="2" Grid.Row="1" Style="{StaticResource buttonStyle}"></Button>
-        <Button x:Name="btnCamera" Content="Camera" Grid.Column="2" Grid.Row="2" Style="{StaticResource buttonStyle}" Click="btnCamera_Click"></Button>
-        <Button x:Name="btnSettings" Content="Settings" Margin="0,0,0,45" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
+        
+        <!--<Clock:AnalogClock Grid.RowSpan="4" Grid.ColumnSpan="5" Background="CornflowerBlue" HorizontalAlignment="Center" Margin="10,12,0,0" VerticalAlignment="Center"/>-->
+
+        <!--Analog Clock in this grid found at: http://www.codeproject.com/Articles/29438/Analog-Clock-in-WPF-->
+        <Grid Width="300" Height="300" Grid.RowSpan="4" Grid.ColumnSpan="5" HorizontalAlignment="Center" Margin="10,12,0,0" VerticalAlignment="Center">
+            
+            <!--Clock face image found at: http://modculture.typepad.com/photos/uncategorized/2008/10/29/800496_m.jpg-->
+            <Image Source="Images/clockFace.jpg"></Image>
+
+            <!-- Second  -->
+            <Rectangle Margin="150,0,149,150" Name="rectangleSecond" Stroke="White" Height="120" VerticalAlignment="Bottom">
+                <Rectangle.RenderTransform>
+                    <RotateTransform x:Name="secondHand" CenterX="0" CenterY="120" Angle="0" />
+                </Rectangle.RenderTransform>
+            </Rectangle>
+            <!-- -->
+
+            <!-- Minute  -->
+            <Rectangle Margin="150,49,149,151" Name="rectangleMinute" Stroke="LightGreen">
+                <Rectangle.RenderTransform>
+                    <RotateTransform x:Name="minuteHand" CenterX="0" CenterY="100" Angle="0" />
+                </Rectangle.RenderTransform>
+            </Rectangle>
+            <!-- -->
+
+            <!-- Hour  -->
+            <Rectangle Margin="150,80,149,150" Name="rectangleHour" Stroke="LightYellow">
+                <Rectangle.RenderTransform>
+                    <RotateTransform x:Name="hourHand" CenterX="0" CenterY="70" Angle="0" />
+                </Rectangle.RenderTransform>
+            </Rectangle>
+            <!---->
+    </Grid>        
+        
+        
+            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="White" Opacity="0.5" Direction="135" ShadowDepth="7" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="0.1, 0" EndPoint="0.5, 1">
+                    <GradientStop Color="Black" Offset="0"/>
+                    <GradientStop Color="White" Offset="1.5"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0">
+            <StackPanel.Effect>
+                <DropShadowEffect ShadowDepth="10" Direction="135" Color="Blue" BlurRadius="10" />
+            </StackPanel.Effect>
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnRadio" Content="Radio" HorizontalAlignment="Right" Margin="0,50,0,0" Style="{StaticResource buttonStyle}" Click="btnRadio_Click"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="1">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnMusic" Content="Music" Style="{StaticResource buttonStyle}" Click="btnMusic_Click"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="2">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnVideo" Content="Video"  Style="{StaticResource buttonStyle}"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="3">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnInternet" Content="Internet" Grid.ColumnSpan="1" HorizontalAlignment="Right" Margin="0,0,0,45" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0" Grid.Column="2">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnPhone" Content="Phone" Grid.Column="3" Margin="-105,50,0,0" Style="{StaticResource buttonStyle}"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="1" Grid.Column="2">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnGps" Content="GPS" Grid.Column="2" Grid.Row="1" Style="{StaticResource buttonStyle}"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="2" Grid.Column="2">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnCamera" Content="Camera" Grid.Column="2" Grid.Row="2" Style="{StaticResource buttonStyle}" Click="btnCamera_Click"></Button>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="3" Grid.Column="2">
+            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+            <Button x:Name="btnSettings" Content="Settings" Margin="0,0,0,45" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
+        </StackPanel>
     </Grid>
 </UserControl>
