--- a/CarMedia/CarMedia/Home.xaml
+++ b/CarMedia/CarMedia/Home.xaml
@@ -5,18 +5,19 @@
       xmlns:Clock="clr-namespace:Clock;assembly=Clock"
       x:Class="CarMedia.Home"            
       mc:Ignorable="d" 
-      Background="Black"
-    MinWidth="935" MinHeight="465">
+      Background="Transparent"
+    MinWidth="935" Height="465">
 
     <!--MinWidth="650" MinHeight="420" MaxHeight="430"-->
     
     <UserControl.Resources>
         <Style x:Key="buttonStyle">
-            <Setter Property="Control.Height" Value="50"/>
-            <Setter Property="Control.Width" Value="100"/>
-            <Setter Property="Control.Background" Value="CornflowerBlue"/>
-            <Setter Property="Control.FontFamily" Value="DS-Digital"/>
-            <Setter Property="Control.FontSize" Value="25"/>
+            <Setter Property="Control.Height" Value="70"/>
+            <Setter Property="Control.Width" Value="140"/>
+            <Setter Property="Control.Background" Value="Transparent"/>
+            <Setter Property="Control.FontFamily" Value="Segoe UI"/>
+            <Setter Property="Control.FontSize" Value="30"/>
+            <Setter Property="Control.Foreground" Value="White"/>
             <Setter Property="Control.FontWeight" Value="Bold"/>
             <Setter Property="Control.Template">
                 <Setter.Value>
@@ -32,13 +33,13 @@
     
 
     
-    <Grid>
-        
-        
+    <Grid>             
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="3.1*"/>
+            <ColumnDefinition Width="1.5*"/>
+            <ColumnDefinition  Width="1.5*"/>
             <ColumnDefinition  Width="3.2*"/>
-            <ColumnDefinition  Width="3*"/>
+            <ColumnDefinition  Width="1.5*"/>
+            <ColumnDefinition  Width="1.5*"/>
             
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -52,10 +53,10 @@
         <!--<Clock:AnalogClock Grid.RowSpan="4" Grid.ColumnSpan="5" Background="CornflowerBlue" HorizontalAlignment="Center" Margin="10,12,0,0" VerticalAlignment="Center"/>-->
 
         <!--Analog Clock in this grid found at: http://www.codeproject.com/Articles/29438/Analog-Clock-in-WPF-->
-        <Grid Width="300" Height="300" Grid.RowSpan="4" Grid.ColumnSpan="5" HorizontalAlignment="Center" Margin="10,12,0,0" VerticalAlignment="Center">
+        <Grid Width="300" Height="300" Grid.RowSpan="4" Grid.ColumnSpan="5" HorizontalAlignment="Center" VerticalAlignment="Center">
             
             <!--Clock face image found at: http://modculture.typepad.com/photos/uncategorized/2008/10/29/800496_m.jpg-->
-            <Image Source="Images/clockFace.jpg"></Image>
+            <Image Source="Images/clockFace.png"></Image>
 
             <!-- Second  -->
             <Rectangle Margin="150,0,149,150" Name="rectangleSecond" Stroke="White" Height="120" VerticalAlignment="Bottom">
@@ -82,59 +83,152 @@
             <!---->
     </Grid>        
         
-        
-            <Border BorderBrush="Black" BorderThickness="3" CornerRadius="3" Margin="10" >
+        <Border BorderBrush="Black" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
             <Border.Effect>
-                <DropShadowEffect BlurRadius="10" Color="White" Opacity="0.5" Direction="135" ShadowDepth="7" />
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="135" ShadowDepth="10" />
             </Border.Effect>
                 <Border.Background>
-                  <LinearGradientBrush StartPoint="0.1, 0" EndPoint="0.5, 1">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="White" Offset="1.5"/>
+                  <LinearGradientBrush StartPoint="0.1, 0" EndPoint="0.3, 0.5">
+                    <GradientStop Color="#FF0E155D" Offset="0.3"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
                   </LinearGradientBrush>
                 </Border.Background>
         </Border>
-        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0">
+        
+        <Border BorderBrush="Black" Grid.Row="1" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="160" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="0, 2" EndPoint="0.5, 1">
+                    <GradientStop Color="#FF0E155D" Offset="0.3"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="2" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="210" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="0, 2" EndPoint="0.5, 1">
+                   <GradientStop Color="#FF0E155D" Offset="0.3"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="3" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="220" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="0, 2" EndPoint="0.5, 1">
+                    <GradientStop Color="#FF0E155D" Offset="0.3"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="45" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="1, 0.5" EndPoint="0.9, 0.9">
+                    <GradientStop Color="#FF0E155D" Offset="0"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="25" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="1, 0.5" EndPoint="0.7, 0.8">
+                    <GradientStop Color="#FF0E155D" Offset="0"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="2" Grid.Column="3" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="325" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="1, 1" EndPoint="0.7, 0.5">
+                    <GradientStop Color="#FF0E155D" Offset="0"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <Border BorderBrush="Black" Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="2" BorderThickness="3" CornerRadius="3" Margin="10" >
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFABBBD3" Opacity="0.8" Direction="315" ShadowDepth="10" />
+            </Border.Effect>
+                <Border.Background>
+                  <LinearGradientBrush StartPoint="1, 1" EndPoint="0.3, 0.5">
+                    <GradientStop Color="#FF0E155D" Offset="0"/>
+                    <GradientStop Color="#FF376BB6" Offset="1.3"/>
+                  </LinearGradientBrush>
+                </Border.Background>
+        </Border>
+        
+        <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="20,0" Grid.Row="0">
             <StackPanel.Effect>
-                <DropShadowEffect ShadowDepth="10" Direction="135" Color="Blue" BlurRadius="10" />
+                <DropShadowEffect ShadowDepth="3" Direction="180" Color="White" BlurRadius="10" />
             </StackPanel.Effect>
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnRadio" Content="Radio" HorizontalAlignment="Right" Margin="0,50,0,0" Style="{StaticResource buttonStyle}" Click="btnRadio_Click"></Button>
+            <Image Source="Images/radio_Icon.png" MaxHeight="80" MouseDown="btnRadio_Click"></Image>            
         </StackPanel>
+        <Button x:Name="btnRadio" Grid.Column="1" Content="Radio" Style="{StaticResource buttonStyle}" Click="btnRadio_Click"></Button>
         
         <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="1">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnMusic" Content="Music" Style="{StaticResource buttonStyle}" Click="btnMusic_Click"></Button>
+            <StackPanel.Effect>
+                <DropShadowEffect ShadowDepth="3" Direction="180" Color="White" BlurRadius="10" />
+            </StackPanel.Effect>
+            <Image Source="Images/music_Icon.png" MaxHeight="80" MouseDown="btnRadio_Click"></Image>            
         </StackPanel>
+        <Button x:Name="btnMusic" Content="Music" Grid.Column="1" Grid.Row="1" Style="{StaticResource buttonStyle}" Click="btnMusic_Click"></Button>
         
         <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="2">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnVideo" Content="Video"  Style="{StaticResource buttonStyle}"></Button>
+            <StackPanel.Effect>
+                <DropShadowEffect ShadowDepth="3" Direction="180" Color="White" BlurRadius="10" />
+            </StackPanel.Effect>
+            <Image Source="Images/video_Icon.png" MaxHeight="80" MouseDown="btnRadio_Click"></Image>            
         </StackPanel>
+        <Button x:Name="btnVideo" Content="Video" Grid.Column="1" Grid.Row="2" Style="{StaticResource buttonStyle}"></Button>
         
         <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="3">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnInternet" Content="Internet" Grid.ColumnSpan="1" HorizontalAlignment="Right" Margin="0,0,0,45" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
+            <StackPanel.Effect>
+                <DropShadowEffect ShadowDepth="3" Direction="180" Color="White" BlurRadius="10" />
+            </StackPanel.Effect>
+            <Image Source="Images/internet_Icon.png" MaxHeight="80" MouseDown="btnRadio_Click"></Image>            
         </StackPanel>
+        <Button x:Name="btnInternet" Content="Internet" Grid.Column="1" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
         
-        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0" Grid.Column="2">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnPhone" Content="Phone" Grid.Column="3" Margin="-105,50,0,0" Style="{StaticResource buttonStyle}"></Button>
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="0" Grid.Column="4">
+            <Image Source="Images/phone_Icon.png" MaxHeight="80" Margin="30,0" MouseDown="btnRadio_Click"></Image>            
         </StackPanel>
+        <Button x:Name="btnPhone" Content="Phone" Grid.Column="3" Style="{StaticResource buttonStyle}"></Button>
         
-        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="1" Grid.Column="2">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnGps" Content="GPS" Grid.Column="2" Grid.Row="1" Style="{StaticResource buttonStyle}"></Button>
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="1" Grid.Column="3">           
+            <Button x:Name="btnGps" Content="GPS" Grid.Row="1" Style="{StaticResource buttonStyle}"></Button>
         </StackPanel>
+        <Image Source="Images/gps_Icon.png" Grid.Column="4" Grid.Row="1" MaxHeight="80" MouseDown="btnRadio_Click"></Image>
         
-        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="2" Grid.Column="2">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
-            <Button x:Name="btnCamera" Content="Camera" Grid.Column="2" Grid.Row="2" Style="{StaticResource buttonStyle}" Click="btnCamera_Click"></Button>
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="2" Grid.Column="3">            
+            <Button x:Name="btnCamera" Content="Camera" Style="{StaticResource buttonStyle}" Click="btnCamera_Click"></Button>
         </StackPanel>
+        <Image Source="Images/camera_Icon.png" MaxHeight="80" Grid.Column="4" Grid.Row="2" MouseDown="btnRadio_Click"></Image>
         
-        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="3" Grid.Column="2">
-            <Image Source="Images/radio_Icon.png" MaxHeight="150" MouseDown="btnRadio_Click"></Image>
+        <StackPanel Orientation="Horizontal" Margin="20,0" Grid.Row="3" Grid.Column="3">            
             <Button x:Name="btnSettings" Content="Settings" Margin="0,0,0,45" HorizontalAlignment="Left" Grid.Column="2" Grid.Row="3" Style="{StaticResource buttonStyle}"></Button>
         </StackPanel>
+        <Image Source="Images/settings_Icon.png" MaxHeight="80" Grid.Column="4" Grid.Row="3" MouseDown="btnRadio_Click"></Image>
     </Grid>
 </UserControl>
