--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -6,7 +6,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
       Background="Transparent"
-      MinWidth="935" MinHeight="465" MaxHeight="465">
+      Width="935" Height="465" MaxHeight="465">
     
     <UserControl.Resources>
         <Style x:Key="MenuTextStyle">
