--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -46,7 +46,8 @@
         <Button x:Name="BtnBack" Grid.Column="1" Padding="5" Background="Transparent" BorderBrush="Transparent" MaxHeight="40" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,0" Click="BtnBack_Click">
             <Image Source="Images\back_Arrow.png"></Image>
         </Button>
-        <Grid x:Name="nowPlaying" Visibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,15,15,0">
+        <Label x:Name="lblNowShowing" FontSize="28" Foreground="White" Grid.Column="1" Grid.RowSpan="2" Margin="50,0,0,0"></Label>
+        <Grid x:Name="nowPlaying" Visibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,15,15,0" Opacity="0.7" Background="#D8000000">
         <StackPanel  >
             <TextBlock Text="Now Playing" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="CornflowerBlue" FontSize="20" FontWeight="Bold"></TextBlock>
                 <TextBlock x:Name="npSongTitle" HorizontalAlignment="Center" FontSize="25" Margin="0,50,0,0" Foreground="CornflowerBlue"></TextBlock>
@@ -54,21 +55,34 @@
             <TextBlock x:Name="npAlbumTitle" HorizontalAlignment="Center" FontSize="16" Margin="0,5" Foreground="CornflowerBlue"></TextBlock>
         </StackPanel>            
             </Grid>
-        <ListView x:Name="lvSongs" Visibility="Visible" Grid.Row="1" Grid.Column="1" Margin="0,15,15,0" Background="Gray" SelectionChanged="lvSongs_SelectionChanged" MouseDoubleClick="lvSongs_MouseDoubleClick" >
+        <ListView x:Name="lvSongs" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,15,15,10" SelectionChanged="lvSongs_SelectionChanged" MouseDoubleClick="lvSongs_MouseDoubleClick" Opacity="0.7" Background="#D8000000" >
             <!--<GridView>-->
             <ListView.View>
                 <GridView>
-                    <GridViewColumn x:Name="songName" DisplayMemberBinding="{Binding TrackName}" />
-                    <GridViewColumn x:Name="album" DisplayMemberBinding="{Binding AlbumName}" />
-                    <GridViewColumn x:Name="artist" DisplayMemberBinding="{Binding ArtistName}" >
                     
-                    
-                        <!--<GridViewColumn.CellTemplate>
+                    <GridViewColumn x:Name="songName">
+                        <GridViewColumnHeader Visibility="Hidden"></GridViewColumnHeader>
+                        <GridViewColumn.CellTemplate>
                             <DataTemplate>
+                                <TextBlock x:Name="Txt" FontSize="28" Text="{Binding TrackName}" Margin="0,10" VerticalAlignment="Bottom"  Foreground="White" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    
+                    <!--<GridViewColumn x:Name="album" DisplayMemberBinding="{Binding Artist.AlbumName}" />-->                    
+                    <GridViewColumn x:Name="artist">
+                        <GridViewColumnHeader Visibility="Hidden"></GridViewColumnHeader>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock x:Name="Txt" FontSize="18" Text="{Binding Artist.ArtistName}" Margin="0,10" VerticalAlignment="Bottom" Foreground="CornflowerBlue" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                            <!--<DataTemplate>
                                 <TextBlock Text="{Binding artist}" TextDecorations="Underline" Foreground="Blue" Cursor="Hand" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>-->
                     </GridViewColumn>
+                    
                 </GridView>
             </ListView.View>
             <!--<GridViewColumn x:Name="Col1" Header="Name" Width="100" DisplayMemberBinding="{Binding Name}"/>
@@ -97,7 +111,8 @@
                 <Image Grid.Row="1" Grid.Column="3" Source="C:\Users\Paul\Documents\IT\Year4\Project\ICAAM_Code\CarMedia\CarMedia\Images\radio_Icon.png"></Image>
             </Grid>-->
         </ScrollViewer>
-        <StackPanel Name="spPlayControls" Grid.Column="1" Grid.Row="2" Margin="0,10,0,0">
+        <ListBox x:Name="lbxAlbumsTracks" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000"></ListBox>
+        <StackPanel Name="spPlayControls" Visibility="Hidden" Grid.Column="1" Grid.Row="2" Margin="0,10,0,0">
             <!--<StackPanel Orientation="Horizontal">-->
             <Grid>
                 <Grid.ColumnDefinitions>
