--- a/CarMedia/CarMedia/Music.xaml
+++ b/CarMedia/CarMedia/Music.xaml
@@ -23,7 +23,7 @@
 
     <Grid Margin="5">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1.5*"/>
             <RowDefinition Height="11*"/>
             <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
@@ -43,10 +43,10 @@
         <Button x:Name="HomeBtn" Grid.RowSpan="2" Grid.ColumnSpan="2" Background="Transparent" BorderBrush="Transparent" MaxHeight="40" VerticalAlignment="Top" Click="HomeBtn_Click" HorizontalAlignment="Center">
             <Image x:Name="imgHomeIcon"></Image>
         </Button>
-        <Button x:Name="BtnBack" Grid.Column="1" Padding="5" Background="Transparent" BorderBrush="Transparent" MaxHeight="40" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,0,0,0" Click="BtnBack_Click">
+        <Button x:Name="BtnBack" Grid.Column="1"  Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Left" MaxHeight="50" Click="BtnBack_Click">
             <Image Source="Images\back_Arrow.png"></Image>
         </Button>
-        <Label x:Name="lblNowShowing" FontSize="28" Foreground="White" Grid.Column="1" Grid.RowSpan="2" Margin="50,0,0,0"></Label>
+        <Label x:Name="lblNowShowing" FontSize="28" Foreground="White" MaxWidth="200" Grid.Column="1" Grid.RowSpan="2" HorizontalAlignment="Left" Margin="50,0,0,0" ></Label>
         <Grid x:Name="nowPlaying" Visibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,15,15,0" Opacity="0.7" Background="#D8000000">
         <StackPanel  >
             <TextBlock Text="Now Playing" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="CornflowerBlue" FontSize="20" FontWeight="Bold"></TextBlock>
@@ -55,7 +55,7 @@
             <TextBlock x:Name="npAlbumTitle" HorizontalAlignment="Center" FontSize="16" Margin="0,5" Foreground="CornflowerBlue"></TextBlock>
         </StackPanel>            
             </Grid>
-        <ListView x:Name="lvSongs" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,15,15,10" SelectionChanged="lvSongs_SelectionChanged" MouseDoubleClick="lvSongs_MouseDoubleClick" Opacity="0.7" Background="#D8000000" >
+        <ListView x:Name="lvSongs" Grid.RowSpan="2" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden" Grid.Row="1" Grid.Column="1" Margin="0,10,15,10" SelectionChanged="lvSongs_SelectionChanged" Opacity="0.7" Background="#D8000000" >
             <!--<GridView>-->
             <ListView.View>
                 <GridView>
@@ -111,7 +111,7 @@
                 <Image Grid.Row="1" Grid.Column="3" Source="C:\Users\Paul\Documents\IT\Year4\Project\ICAAM_Code\CarMedia\CarMedia\Images\radio_Icon.png"></Image>
             </Grid>-->
         </ScrollViewer>
-        <ListBox x:Name="lbxAlbumsTracks" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000"></ListBox>
+        <ListBox x:Name="lbxAlbumsTracks" Grid.RowSpan="2" Grid.Column="1" Grid.Row="1" Width="700" Height="380" Visibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" Opacity="0.7" Background="#D8000000" SelectionChanged="lbxAlbumsTracks_SelectionChanged"></ListBox>
         <StackPanel Name="spPlayControls" Visibility="Hidden" Grid.Column="1" Grid.Row="2" Margin="0,10,0,0">
             <!--<StackPanel Orientation="Horizontal">-->
             <Grid>
