--- a/CarMedia/CarMedia/Music Player/Music.xaml
+++ b/CarMedia/CarMedia/Music Player/Music.xaml
@@ -42,7 +42,7 @@
             </StackPanel>
             <Image x:Name="imgAlbumArt" VerticalAlignment="Bottom" Margin="5"/>
         </DockPanel>
-        <TextBox x:Name="txtSearch" Grid.Column="1" Height="25" Width="150" Text="Search" HorizontalAlignment="Right" Margin="15,0" HorizontalContentAlignment="Right" FontSize="18" Padding="3,0" Background="Gray"/>
+        <TextBox x:Name="txtSearch" Grid.Column="1" Height="25" Width="150" Text="Search" HorizontalAlignment="Right" Margin="15,0" HorizontalContentAlignment="Right" FontSize="18" Padding="3,0" Background="Gray" TextChanged="txtSearch_TextChanged" GotFocus="txtSearch_GotFocus"/>
         <Button x:Name="HomeBtn" Grid.RowSpan="2" Grid.ColumnSpan="2" Background="Transparent" BorderBrush="Transparent" MaxHeight="40" VerticalAlignment="Top" Click="HomeBtn_Click" HorizontalAlignment="Center">
             <Image x:Name="imgHomeIcon"></Image>
         </Button>
